# BuildABear.Backend/Controllers/FeedbackController.cs
@@ -1,6 +1,8 @@
 ﻿using BuildABear.Core.DataTransferObjects;
+using BuildABear.Core.Entities;
 using BuildABear.Core.Responses;
 using BuildABear.Infrastructure.Authorization;
+using BuildABear.Infrastructure.Extensions;
 using BuildABear.Infrastructure.Services.Interfaces;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
@@ -13,10 +15,20 @@ namespace BuildABear.Backend.Controllers;
 public class FeedbackController : AuthorizedController
 {
     private readonly IUserService _userService;
-    public FeedbackController(IUserService userService) : base(userService)  => _userService = userService;
+    private readonly IFeedbackService _feedbackService;
+    public FeedbackController(IUserService userService, IFeedbackService feedbackService) : base(userService)
+    {
+        _userService = userService;
+        _feedbackService = feedbackService;
+    }
 
     [Authorize]
     [HttpPost]
-    public async Task<ActionResult<RequestResponse<BriefTeddyItemDTO>>> Add([FromForm] TeddyItemAddDTO form) { 
+    public async Task<ActionResult<RequestResponse>> Add([FromBody] FeedbackDTO form) {
+        var currentUser = await GetCurrentUser();
+
+        return currentUser.Result != null ?
+            this.FromServiceResponse(await _feedbackService.Add(form)) :
+            this.ErrorMessageResult(currentUser.Error);
     }
 }
