# BuildABear.Core/DataTransferObjects/Feedback/FeedbackDTO.cs
@@ -1,11 +1,12 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
+﻿using BuildABear.Core.Enums;
 
 namespace BuildABear.Core.DataTransferObjects;
 
 public class FeedbackDTO
 {
+    public string Comments { get; set; } = default!; // text box
+    public FeedbackGrade FeedbackGrade { get; set; } = default!; // radio
+    public FeedbackServiceAction FeedbackServiceAction { get; set; } = default!; // select
+    public bool Contact { get; set; } = default!;
+
 }
